# chutes-ai-load-balancer

./: .env.example  .gitignore  AGENTS.md  README-routing.md  README.md  RUNNING-PROXY.md  chutes_routing.py  litellm-config.yaml  llm_stats_analysis.md  pyproject.toml  start_litellm.py
.github/ISSUES/: 01-priority-weighting.md  02-load-threshold-protection.md  03-multi-factor-scoring.md  04-health-checks.md  README.md
.github/workflows/: tests.yml
.opencode/commands/: opsx-apply.json  opsx-archive.json  opsx-continue.json  opsx-design.json  opsx-explore.json  opsx-ff.json  opsx-new.json  opsx-propose.json  opsx-review.json  opsx-sync.json  opsx-task.json
docs/: chute-targeting-research.md  chutes-utilization-api.md  configuration.md  migration.md  monitoring.md  routing-guide.md
openspec/: config.yaml
openspec/changes/: .gitkeep  README.md
openspec/changes/api-structured-responses/: design.md  tasks.md
openspec/changes/intelligent-multi-metric-routing/: .openspec.yaml  behavior.md  design.md  examples.md  proposal.md  tasks.md
openspec/specs/proxy/: spec.md
scripts/: run-proxy.sh  test-proxy.sh  verify_no_hardcoded_models.py  verify_package_structure.py  verify_python_equivalence.py  verify_shell_scripts_deprecated.py
src/litellm_proxy/: __init__.py  exceptions.py
tests/: conftest.py
tests/e2e/: test_full_flow.py
tests/fixtures/: api_responses.py  models.py  routing.py
tests/integration/: test_config_loading.py  test_endpoints.py  test_litellm_proxy.py  test_model_switching.py
tests/unit/: test_degradation.py  test_intelligent_routing.py
(+40 files in other folders)
